# python-skeleton

./: .flake8  .pre-commit-config.yaml  Makefile  app.py  pyproject.toml
app/controller/: default.py
tests/app/controller/: default_test.py
