[tool.poetry]
name = "skeleton"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
ujson = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.0.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
